# PPCU_VLSI

./: .gitignore  .gitmodules  README.md
asic/: automate_synth_and_pr_batch.sh
asic/pr/: mtm_riscv_chip.io
asic/pr/scripts/: 01_initialize_design.tcl  02_connect_power_to_gates.tcl  03_create_floorplan.tcl
asic/pr/timingReports/: 04b_preplace.summary  05_place_opt.summary  07_clock_tree_structure.txt  07_clock_tree_summary.txt  15_area.rpt  (+11 more)
asic/rtl/: mtm_riscv_chip.sv  pads_in.v  pads_out.v  pads_pwr.v
asic/synth/: .gitignore  run_synth.sh
power/: clean.sh  ecoTimingDB  run_power.sh
power/reports/: pwr.rpt  tcf_unannotated_nets.rpt
power/scripts/: run_power.tcl
rtl/misc/: misc.f
rtl/soc/: data_bus_arbiter.sv  instr_bus_arbiter.sv  mtm_riscv_soc.sv  mtm_riscv_soc_pkg.sv  mtm_riscv_soc_wrapper.sv  peripherals.sv  soc.f
sim/: .gitignore  clear.sh  mtm_riscv_soc.f  run.sh  xminitialize.exclude
sim/rtl/: mtm_riscv_soc_top.sv  prim_clock_gating.sv
sim/tb/: tb_mtm_riscv_soc.sv
sim_post/: .gitignore  1_xrun.log.ASIC.872  2_MAX_xrun.log.ASIC.521  2_MIN_xrun.log.ASIC.481  3_xrun.log.ASIC.19  README  led_waves_correct.txt  prepare_post_data.sh  run_post.sh  xminitialize.exclude
sim_post/scripts/: dumptcf.tcl
sim_post/tb/: tb_mtm_riscv_soc.sv
sw/: README
sw/app/: CMakeLists.txt  crt0.S  link.ld
sw/bootloader/: CMakeLists.txt  crt0.S  link.ld
sw/libs/drivers/: CMakeLists.txt
sw/libs/drivers/include/: pmc.h  pmcc.h
sw/libs/drivers/include/pmc_regs/: pmc_cr.h  pmc_sr.h
sw/libs/drivers/src/: pmc.cpp  pmcc.cpp
sw/libs/misc/: CMakeLists.txt
sw/libs/misc/include/: pixel_matrix.h
sw/libs/misc/src/: debug.cpp  pixel_matrix.cpp  string.cpp  ui.cpp
tools/: morse_converter.py  rxd_rom_generator.py
(+115 files in other folders)
